--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,30 @@
 [submodule "submodules/linphone"]
 	path = submodules/linphone
 	url = git://git.linphone.org/linphone
+[submodule "submodules/bcg729"]
+	path = submodules/bcg729
+	url = git://git.linphone.org/bcg729.git
+[submodule "submodules/bzrtp"]
+	path = submodules/bzrtp
+	url = git://git.linphone.org/bzrtp.git
+[submodule "submodules/msamr"]
+	path = submodules/msamr
+	url = git://git.linphone.org/msamr.git
+[submodule "submodules/msilbc"]
+	path = submodules/msilbc
+	url = git://git.linphone.org/msilbc.git
+[submodule "submodules/msopenh264"]
+	path = submodules/msopenh264
+	url = git://git.linphone.org/msopenh264.git
+[submodule "submodules/mssilk"]
+	path = submodules/mssilk
+	url = git://git.linphone.org/mssilk.git
+[submodule "submodules/mswasapi"]
+	path = submodules/mswasapi
+	url = git://git.linphone.org/mswasapi.git
+[submodule "submodules/libilbc-rfc3951"]
+	path = submodules/libilbc-rfc3951
+	url = git://git.linphone.org/libilbc-rfc3951.git
+[submodule "submodules/msx264"]
+	path = submodules/msx264
+	url = git://git.linphone.org/msx264.git
