--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "submodules/msx264"]
 	path = submodules/msx264
 	url = git://git.linphone.org/msx264.git
+[submodule "submodules/mswebrtc"]
+	path = submodules/mswebrtc
+	url = git://git.linphone.org/mswebrtc.git
