--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,8 @@
 [submodule "submodules/externals/mbedtls"]
 	path = submodules/externals/mbedtls
 	url = git://git.linphone.org/mbedtls.git
+[submodule "submodules/externals/bv16-floatingpoint"]
+        path = submodules/externals/bv16-floatingpoint
+        url = git://git.linphone.org/bv16-floatingpoint.git
+
+
