--- a/.gitmodules
+++ b/.gitmodules
@@ -73,7 +73,7 @@
 	path = submodules/externals/antlr3
 	url = git://git.linphone.org/antlr3.git
 [submodule "submodules/cunit"]
-	path = submodules/cunit
+	path = submodules/externals/cunit
 	url = git://git.linphone.org/cunit.git
 [submodule "submodules/externals/v4l-utils"]
 	path = submodules/externals/v4l-utils
