feat(app): use now cmake to build project - remove useless scripts - move `build_resources_file` to root and rename it to `update_resources` - update/create languages directly with cmake

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,13 +7,16 @@ set(LINPHONE_EXEC linphone)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-set(QT5_PACKAGES Core Gui Quick Widgets QuickControls2)
+set(QT5_PACKAGES Core Gui Quick Widgets QuickControls2 LinguistTools)
 
-set(LIBS "")
-foreach(package ${QT5_PACKAGES})
-  list(APPEND LIBS "Qt::${package}")
-
-find_package(Qt5 COMPONENTS ${QT5_PACKAGES})
+set(LIBS)
+foreach (package ${QT5_PACKAGES})
+  # `qt5_create_translation` is provided from `LinguistTools` package.
+  # But the `Qt5::LinguistTools` lib does not exist. Remove it.
+  if (NOT (${package} STREQUAL LinguistTools))
+    list(APPEND LIBS "Qt5::${package}")
+  endif ()
+endforeach ()
 
 set(SOURCES
   src/app.cpp
@@ -39,8 +42,37 @@ set(HEADERS
   src/components/settings/SettingsModel.hpp
 )
 
-# Include `qrc` files.
-qt5_add_resources(RESOURCES resources.qrc)
+set(QRC_RESOURCES
+  resources.qrc
+)
+
+set(LANGUAGES_DIRECTORY languages)
+set(LANGUAGES en fr)
+
+# --------------------------------------------------------------------
+
+find_package(Qt5 COMPONENTS ${QT5_PACKAGES})
+
+# Build languages resource file.
+set(TS_FILES)
+set(I18N_CONTENT "<!DOCTYPE RCC>\n<RCC version=\"1.0\">\n  <qresource prefix=\"/\">\n")
+foreach (lang ${LANGUAGES})
+  list(APPEND TS_FILES "${LANGUAGES_DIRECTORY}/${lang}.ts")
+
+  # Note: the below `languages/` path is not the same as the `${LANGUAGES_DIRECTORY}` value.
+  # It's the symbolic path used by the linphone binary in the qrc model.
+  set(I18N_CONTENT "${I18N_CONTENT}    <file alias=\"languages/${lang}\">${lang}.qm</file>\n")
+endforeach ()
+set(I18N_CONTENT "${I18N_CONTENT}  </qresource>\n</RCC>\n")
+
+set(I18N_RESOURCE i18n.qrc)
+file(WRITE "${CMAKE_BINARY_DIR}/${I18N_RESOURCE}" "${I18N_CONTENT}")
+
+# Create `qm` files from `ts` files.
+qt5_create_translation(QM_FILES ${TS_FILES} src ui)
+
+# Add qrc. (images, qml, translations...)
+qt5_add_resources(RESOURCES ${QRC_RESOURCES} "${CMAKE_BINARY_DIR}/${I18N_RESOURCE}")
 
 # Build.
 add_executable(${LINPHONE_EXEC} ${SOURCES} ${HEADERS} ${RESOURCES})
