feat(TimelineModel): init with sqlite data

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ cmake_minimum_required(VERSION 3.1)
 project(linphone)
 
 set(LINPHONE_EXEC linphone)
+set(CMAKE_CXX_STANDARD 11)
 
 # Use automatically moc from Qt5.
 set(CMAKE_AUTOMOC ON)
