--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -42,6 +42,7 @@ set(SOURCES
   src/components/settings/AccountSettingsModel.cpp
   src/components/settings/SettingsModel.cpp
   src/components/smart-search-bar/SmartSearchBarModel.cpp
+  src/components/smart-search-bar/SmartSearchBarProxyModel.cpp
   src/components/timeline/TimelineModel.cpp
   src/main.cpp
 )
@@ -60,6 +61,7 @@ set(HEADERS
   src/components/settings/AccountSettingsModel.hpp
   src/components/settings/SettingsModel.hpp
   src/components/smart-search-bar/SmartSearchBarModel.hpp
+  src/components/smart-search-bar/SmartSearchBarProxyModel.hpp
   src/components/timeline/TimelineModel.hpp
   src/utils.hpp
 )
