feat(app): add `sip-addresses`/* components

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -66,6 +66,8 @@ set(SOURCES
   src/components/notifier/Notifier.cpp
   src/components/settings/AccountSettingsModel.cpp
   src/components/settings/SettingsModel.cpp
+  src/components/sip-addresses/SipAddressesModel.cpp
+  src/components/sip-addresses/SipAddressModel.cpp
   src/components/smart-search-bar/SmartSearchBarModel.cpp
   src/components/smart-search-bar/SmartSearchBarProxyModel.cpp
   src/components/timeline/TimelineModel.cpp
@@ -90,6 +92,8 @@ set(HEADERS
   src/components/presence/Presence.hpp
   src/components/settings/AccountSettingsModel.hpp
   src/components/settings/SettingsModel.hpp
+  src/components/sip-addresses/SipAddressesModel.hpp
+  src/components/sip-addresses/SipAddressModel.hpp
   src/components/smart-search-bar/SmartSearchBarModel.hpp
   src/components/smart-search-bar/SmartSearchBarProxyModel.hpp
   src/components/timeline/TimelineModel.hpp
