--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
-# ====================================================================
+# ==============================================================================
 # CMakeLists.txt
-# ====================================================================
+# ==============================================================================
 
 cmake_minimum_required(VERSION 3.1)
 project(linphone)
@@ -31,9 +31,9 @@ set(CUSTOM_FLAGS "\
 set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${CUSTOM_FLAGS}")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DQT_QML_DEBUG -DQT_DECLARATIVE_DEBUG")
 
-# --------------------------------------------------------------------
-# Define packages, libs, sources, headers, resources and languages
-# --------------------------------------------------------------------
+# ------------------------------------------------------------------------------
+# Define packages, libs, sources, headers, resources and languages.
+# ------------------------------------------------------------------------------
 
 set(QT5_PACKAGES Core Gui Quick Widgets QuickControls2 LinguistTools)
 
@@ -108,7 +108,7 @@ set(LANGUAGES_DIRECTORY assets/languages)
 set(I18N_FILENAME i18n.qrc)
 set(LANGUAGES en fr)
 
-# --------------------------------------------------------------------
+# ------------------------------------------------------------------------------
 
 function (PREPEND list prefix)
   set(new_list "")
@@ -125,9 +125,9 @@ PREPEND(SOURCES "${CMAKE_SOURCE_DIR}/")
 PREPEND(HEADERS "${CMAKE_SOURCE_DIR}/")
 PREPEND(QRC_RESOURCES "${CMAKE_SOURCE_DIR}/")
 
-# --------------------------------------------------------------------
+# ------------------------------------------------------------------------------
 # Compute QML files list.
-# --------------------------------------------------------------------
+# ------------------------------------------------------------------------------
 
 set(QML_SOURCES)
 file(STRINGS ${QRC_RESOURCES} QRC_RESOURCES_CONTENT)
@@ -149,18 +149,18 @@ add_custom_target(
   COMMAND "${CMAKE_SOURCE_DIR}/tools/check_qml_syntax"
 )
 
-# --------------------------------------------------------------------
+# ------------------------------------------------------------------------------
 # Init git hooks.
-# --------------------------------------------------------------------
+# ------------------------------------------------------------------------------
 
 execute_process(COMMAND ${CMAKE_COMMAND} -E copy
   "${CMAKE_SOURCE_DIR}/tools/private/pre-commit"
   "${CMAKE_SOURCE_DIR}/../.git/hooks/pre-commit"
 )
 
-# --------------------------------------------------------------------
+# ------------------------------------------------------------------------------
 # Build.
-# --------------------------------------------------------------------
+# ------------------------------------------------------------------------------
 
 find_package(Qt5 COMPONENTS ${QT5_PACKAGES})
 
