feat(app):   - avoid the usage of a lot of singletons, use methods in `CoreManager` instead   - create a `UnregisteredSipAddressesProxyModel` model   - unstable

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -68,6 +68,7 @@ set(SOURCES
   src/components/settings/SettingsModel.cpp
   src/components/sip-addresses/SipAddressesModel.cpp
   src/components/sip-addresses/UnregisteredSipAddressesModel.cpp
+  src/components/sip-addresses/UnregisteredSipAddressesProxyModel.hpp
   src/components/timeline/TimelineModel.cpp
   src/main.cpp
 )
@@ -92,6 +93,7 @@ set(HEADERS
   src/components/settings/SettingsModel.hpp
   src/components/sip-addresses/SipAddressesModel.hpp
   src/components/sip-addresses/UnregisteredSipAddressesModel.hpp
+  src/components/sip-addresses/UnregisteredSipAddressesProxyModel.hpp
   src/components/timeline/TimelineModel.hpp
   src/utils.hpp
 )
