--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -68,7 +68,8 @@ set(SOURCES
   src/components/settings/SettingsModel.cpp
   src/components/sip-addresses/SipAddressesModel.cpp
   src/components/sip-addresses/UnregisteredSipAddressesModel.cpp
-  src/components/sip-addresses/UnregisteredSipAddressesProxyModel.hpp
+  src/components/sip-addresses/UnregisteredSipAddressesProxyModel.cpp
+  src/components/smart-search-bar/SmartSearchBarModel.cpp
   src/components/timeline/TimelineModel.cpp
   src/main.cpp
 )
@@ -94,6 +95,7 @@ set(HEADERS
   src/components/sip-addresses/SipAddressesModel.hpp
   src/components/sip-addresses/UnregisteredSipAddressesModel.hpp
   src/components/sip-addresses/UnregisteredSipAddressesProxyModel.hpp
+  src/components/smart-search-bar/SmartSearchBarModel.hpp
   src/components/timeline/TimelineModel.hpp
   src/utils.hpp
 )
