--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -70,6 +70,7 @@ set(SOURCES
   src/components/sip-addresses/UnregisteredSipAddressesModel.cpp
   src/components/sip-addresses/UnregisteredSipAddressesProxyModel.cpp
   src/components/smart-search-bar/SmartSearchBarModel.cpp
+  src/components/smart-search-bar/SmartSearchBarProxyModel.cpp
   src/components/timeline/TimelineModel.cpp
   src/main.cpp
 )
@@ -96,6 +97,7 @@ set(HEADERS
   src/components/sip-addresses/UnregisteredSipAddressesModel.hpp
   src/components/sip-addresses/UnregisteredSipAddressesProxyModel.hpp
   src/components/smart-search-bar/SmartSearchBarModel.hpp
+  src/components/smart-search-bar/SmartSearchBarProxyModel.hpp
   src/components/timeline/TimelineModel.hpp
   src/utils.hpp
 )
